--- a/cadastro.html
+++ b/cadastro.html
@@ -4,14 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href= "img/favicon-16x16.png" type= "image/x-icon">
   <title>Cadastro - Mão Amiga</title>
 </head>
 <body>
 
   <header>
-   <button onclick="window.history.back()">Voltar</button>  <h1>Mão Amiga</h1>
+   <button onclick="window.history.back()">Voltar</button>  
+   <br>
+   <br>
+   <h1>Mão Amiga</h1>
   </header>
-
+<nav class="navbar">
+  
+  <div class="menu-toggle" id="menu-toggle">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  <ul id="menu">
+    <li><a href="index.html">Início</a></li>
+    <li><a href="projetos.html">Projetos Sociais</a></li>
+    <li><a href="cadastro.html">Cadastro</a></li>
+  </ul>
+</nav>
   <section class="cadastro-container">
     <h2>Cadastro de Voluntário</h2>
     <p>Preencha seus dados para fazer parte da nossa rede de solidariedade!</p>
