--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="img/favicon-16x16.png" type="image/x-icon">
+  <script src="script.js"></script>
   <title>Mão Amiga</title>
 </head>
 
@@ -132,7 +133,5 @@
     <p>© 2025 Mão Amiga — Todos os direitos reservados</p>
   </footer>
 
-  <!-- ====== SCRIPT ====== -->
-  <script src="assets/js/script.js"></script>
 </body>
 </html>
