--- a/projetos.html
+++ b/projetos.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
       <link rel="shortcut icon" href= "img/favicon-16x16.png" type= "image/x-icon">
+      <script src="script.js"></script>
+  
     <title>Mão Amiga</title>
     </head>
     <body>
